--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div id="jim-mainWindow">
         <div id="topInfo"class="open" onselectstart="return false;">
-            <div id="infoContent">
+            <div id="infoContent" style="visibility: hidden">
                 <div class="leftcontrols">
                     <div id="logo" class="section"><img src="./resources/_jim/images/sidepanel/logo.png" alt="logo"/></div>
                     <div id="info" class="section info-text-label">
