--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-        <title>沈  婷</title>
+        <title>TYPE YOUR NAME HERE</title>
         <style type="text/css">
             /*基础样式*/
             body {
@@ -130,28 +130,28 @@
 
     <body>
         <header>
-            <h1>沈婷<span>（Web前端）</span></h1>
+            <h1>TITLE of the page<span>（TYPE DESCRIPTION）</span></h1>
         </header>
 
         <section class="contents">
 
             <section class="contacts">
-                <h3>联系方式</h3>
+                <h3>TYPE ADDRESS</h3>
                 <div class="contact-details">
                     <ul>
                         <li class="mail">
-                            <a href="mailto:ainesmile@gmail.com">
-                                ainesmile@gmail.com
+                            <a href="mailto:TYPE number,mail,etc@gmail.com">
+                                TYPE number,mail,etc
                             </a>
                         </li>   
                         <li class="telephone">
-                            <a href="tel:13261432470">
-                                (+86) 132~6143~2470
+                            <a href="tel:TYPE number,mail,etc">
+                                (+86) TYPE number,mail,etc
                             </a>
                         </li>
                         <li class="twitter">
-                            <a href="https://twitter.com/ainesmile" target="_blank">
-                                Twitter: @ainesmile
+                            <a href="https://twitter.com/TYPE number,mail,etc" target="_blank">
+                                Twitter: @TYPE number,mail,etc
                             </a>
                         </li>
                     </ul>
@@ -159,40 +159,40 @@
             </section>
 
             <section class="skills">
-                <h3>编程技能</h3>
+                <h3>TYPE CATEGORY </h3>
                 <div class="skill-details">
 
                     <div class="front-end">
-                        <h4>Web前端</h4>
+                        <h4>TYPE CATEGORY </h4>
                         <ul>
-                            <li>JavaScript</li>
-                            <li>HTML5 / CSS3</li>
-                            <li>jQuery / Zepto.js</li>
-                            <li>Underscore.js</li>
-                            <li>Backbone.js</li>
-                            <li>Node.js / Express</li>
-                            <li>Jade / Handlebars</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
                         </ul>
                     </div>
 
                     <div class="back-end">
-                        <h4>Web后端</h4>
+                        <h4>TYPE CATEGORY </h4>
                         <ul>
-                            <li>C</li>
-                            <li>Python</li>
-                            <li>SQL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
                         </ul>
                     </div>
 
                     <div class="others">
-                        <h4>其他</h4>
+                        <h4>TYPE CATEGORY </h4>
                         <ul>
-                            <li>Git</li>
-                            <li>Vim</li>
-                            <li>T<sub>E</sub>X</li>
-                            <li>Markdown</li>
-                            <li>Stata</li>
-                            <li>Mathematica</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>BIGGER LETTER<sub>SMALLER LETTER</sub>BIGGER LETTER</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
+                            <li>TYPE LABEL</li>
                         </ul>
                     </div>
                     
@@ -200,27 +200,27 @@
             </section>
 
             <section class="experiences">
-                <h3>工作经历</h3>
+                <h3>TYPE EXPERIENCE</h3>
                 <div class="work-details">
                     <h4>
-                        <a href="http://www.wepiao.com/" target="_blank">北京微影时代科技有限公司</a>
-                        <span class="date">2014.12 ~ 2015.06</span>
+                        <a href="http://www.XXXX.com/" target="_blank">TYPE COMPANY</a>
+                        <span class="date">201X ~ 201X</span>
                     </h4>
                     <div>
                         <ul class="work-contents">
                             <li>
-                                参与智慧影院项目开发，项目使用了 Node.js、Express、Jade 与 Gulp 等;
+                                TYPE DESCRIPTION;
                                 <ul class = "content">
-                                    <li>使用 Express Web 应用框架，开发后端服务；</li>
-                                    <li>使用 Zepto 与 RequireJS，开发前端服务。</li>
+                                    <li>TYPE DESCRIPTION；</li>
+                                    <li>TYPE DESCRIPTION。</li>
                                 </ul>
                             </li>
                             <li>
-                                负责微影院项目的维护，项目使用了 Underscore、Backbone 与 Grunt 等;
+                                TYPE DESCRIPTION;
                                 <ul class = "content">
-                                    <li>开发部分功能及修复 Bug；</li>
-                                    <li>将原有代码模板化，大幅降低开发量；</li>
-                                    <li>对原有代码进行重构，大幅降低维护成本。</li>
+                                    <li>TYPE DESCRIPTION；</li>
+                                    <li>TYPE DESCRIPTION；</li>
+                                    <li>TYPE DESCRIPTION。</li>
                                 </ul>
                             </li>
                         </ul>
@@ -229,21 +229,21 @@
             </section>
 
             <section class="educations">
-                <h3>教育背景</h3>
+                <h3>TYPE UNIVERSITY</h3>
                 <div class="edu-details">
                     <h4 class="master">
-                        <a href="http://www.uibe.edu.cn/" target="_blank">
-                            对外经济贸易大学（世界经济）
+                        <a href="http://www.XXXC.edu.cn/" target="_blank">
+                            TYPE UNIVERSITY
                         </a>
-                        <span class="degree">硕士</span>
-                        <span class="date">2012.09 ~ 2014.07</span>
+                        <span class="degree">TYPE DEGREE</span>
+                        <span class="date">201X ~ 201X</span>
                     </h4>
                     <h4 class="bachelor">
-                        <a href="http://www.shufe.edu.cn/" target="_blank">
-                            上海财经大学（数理经济）
+                        <a href="http://www.XXXX.edu.cn/" target="_blank">
+                            TYPE UNIVERSITY
                         </a>
-                        <span class="degree">学士</span>
-                        <span class="date">2008.09 ~ 2012.07</span>
+                        <span class="degree">TYPE DEGREE</span>
+                        <span class="date">200X ~ 200X</span>
                     </h4>
                 </div>
             </section>
