--- a/start.html
+++ b/start.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>Untitled Document</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link type="text/css" href="resources/css/reset.css" rel="Stylesheet" />
     <link type="text/css" href="resources/css/default.css" rel="Stylesheet" />
 
@@ -62,6 +63,7 @@
             _settings.isAxshare = configuration.isAxshare;
             _settings.loadFeedbackPlugin = configuration.loadFeedbackPlugin;
             _settings.startCollapsed = HashString("c") == "1";
+            if(HashString("c") == "2") closePlayer();
 
             $axure.player.settings = _settings;
 
@@ -98,7 +100,7 @@
                 $(window).resize();
                 resizeContent();
                 //wait for ie to get to a good state and resize
-                if($.browser.msie && $.browser.version == "6.0") setTimeout(function() { $('#outerContainer').trigger('resize'); }, 30);
+                if(IE && BROWSER_VERSION == "6.0") setTimeout(function() { $('#outerContainer').trigger('resize'); }, 30);
 
                 if($axure.player.settings.startCollapsed) {
                     collapse();
@@ -129,7 +131,8 @@
             $('#rightPanel').height(newHeight);
             $('#mainFrame').height(newHeight);
 
-            $('#rightPanel').width($(window).width() - $('#leftPanel').width() - $('.vsplitbar').width());
+            if($('#leftPanel').is(':visible')) $('#rightPanel').width($(window).width() - $('#leftPanel').width() - $('.vsplitbar').width());
+            else $('#rightPanel').width($(window).width());
         }
 
         function closePlayer() {
@@ -337,7 +340,7 @@
             </div>
         </div>
         <div id="rightPanel">
-            <iframe id="mainFrame" width="100%" height="100%" src="" frameborder="0" style="display: block;"></iframe>
+            <iframe id="mainFrame" name="mainFrame" width="100%" height="100%" src="" frameborder="0" style="display: block;"></iframe>
         </div>
 
     </div>
