--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>index</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/home/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/index/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" type="text/css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
@@ -36,7 +39,7 @@
     <script src="resources/scripts/axure/adaptive.js"></script>
     <script src="resources/scripts/axure/tree.js"></script>
     <script src="resources/scripts/axure/init.temp.js"></script>
-    <script src="files/home/data.js"></script>
+    <script src="files/index/data.js"></script>
     <script src="resources/scripts/axure/legacy.js"></script>
     <script src="resources/scripts/axure/viewer.js"></script>
     <script type="text/javascript">
@@ -49,27 +52,331 @@
     <div id="base" class="">
 
       <!-- Unnamed (Shape) -->
-      <div id="u0" class="ax_paragraph">
-        <img id="u0_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u0" class="ax_shape">
+        <img id="u0_img" class="img " src="images/index/u0.png"/>
         <!-- Unnamed () -->
         <div id="u1" class="text">
-          <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</span></p>
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u2" class="ax_h2">
+        <img id="u2_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u3" class="text">
+          <p><span>Title Here</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u4" class="ax_h2">
+        <img id="u4_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u5" class="text">
+          <p><span>Etiam porta sem malesuada magna mollis euismod. Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u6" class="ax_shape">
+        <img id="u6_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u7" class="text">
+          <p><span>BUTTON WITH LONG TEXT HERE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u8" class="ax_shape">
+        <img id="u8_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u9" class="text">
+          <p><span>NO THANKS</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u10" class="ax_shape">
+        <img id="u10_img" class="img " src="images/index/u10.png"/>
+        <!-- Unnamed () -->
+        <div id="u11" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u12" class="ax_h2">
+        <img id="u12_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u13" class="text">
+          <p><span>Title Here</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u14" class="ax_h2">
+        <img id="u14_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u15" class="text">
+          <p><span>Etiam porta sem malesuada magna mollis euismod. Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u16" class="ax_shape">
+        <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u17" class="text">
+          <p><span>ACCEPT</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u18" class="ax_shape">
+        <img id="u18_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u19" class="text">
+          <p><span>DECLINE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u20" class="ax_shape">
+        <img id="u20_img" class="img " src="images/index/u20.png"/>
+        <!-- Unnamed () -->
+        <div id="u21" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u22" class="ax_h2">
+        <img id="u22_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u23" class="text">
+          <p><span>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u24" class="ax_shape">
+        <img id="u24_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u25" class="text">
+          <p><span>SHARE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u26" class="ax_shape">
+        <img id="u26_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u27" class="text">
+          <p><span>LEARN MORE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u28" class="ax_shape">
+        <img id="u28_img" class="img " src="images/index/u28.png"/>
+        <!-- Unnamed () -->
+        <div id="u29" class="text">
+          <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u2" class="ax_image">
-        <img id="u2_img" class="img " src="images/home/u2.png"/>
+      <div id="u30" class="ax_image">
+        <img id="u30_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u3" class="text"></div>
+        <div id="u31" class="text">
+          <p><span></span></p>
+        </div>
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u4" class="ax_paragraph">
-        <img id="u4_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u32" class="ax_h2">
+        <img id="u32_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
-        <div id="u5" class="text">
-          <p><span>Label</span></p>
+        <div id="u33" class="text">
+          <p><span>Title Goes Here</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u34" class="ax_shape">
+        <img id="u34_img" class="img " src="images/index/u34.png"/>
+        <!-- Unnamed () -->
+        <div id="u35" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u36" class="ax_h2">
+        <img id="u36_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u37" class="text">
+          <p><span>El Pooch</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u38" class="ax_h2">
+        <img id="u38_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u39" class="text">
+          <p><span>By Alex Nelson</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u40" class="ax_shape">
+        <img id="u40_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u41" class="text">
+          <p><span>FREE SAMPLE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u42" class="ax_shape">
+        <img id="u42_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u43" class="text">
+          <p><span>REVIEW</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u44" class="ax_shape">
+        <img id="u44_img" class="img " src="images/index/u44.png"/>
+        <!-- Unnamed () -->
+        <div id="u45" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u46" class="ax_image">
+        <img id="u46_img" class="img " src="images/index/u30.png"/>
+        <!-- Unnamed () -->
+        <div id="u47" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u48" class="ax_shape">
+        <img id="u48_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u49" class="text">
+          <p><span>NORMAL</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u50" class="ax_shape">
+        <img id="u50_img" class="img " src="images/index/u50.png"/>
+        <!-- Unnamed () -->
+        <div id="u51" class="text">
+          <p><span>HOVER</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u52" class="ax_shape">
+        <img id="u52_img" class="img " src="images/index/u52.png"/>
+        <!-- Unnamed () -->
+        <div id="u53" class="text">
+          <p><span>PRESSED</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u54" class="ax_image">
+        <img id="u54_img" class="img " src="images/index/u54.png"/>
+        <!-- Unnamed () -->
+        <div id="u55" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u56" class="ax_image">
+        <img id="u56_img" class="img " src="images/index/u56.png"/>
+        <!-- Unnamed () -->
+        <div id="u57" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u58" class="ax_image">
+        <img id="u58_img" class="img " src="images/index/u58.png"/>
+        <!-- Unnamed () -->
+        <div id="u59" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u60" class="ax_image">
+        <img id="u60_img" class="img " src="images/index/u60.png"/>
+        <!-- Unnamed () -->
+        <div id="u61" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u62" class="ax_image">
+        <img id="u62_img" class="img " src="images/index/u62.png"/>
+        <!-- Unnamed () -->
+        <div id="u63" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u64" class="ax_image">
+        <img id="u64_img" class="img " src="images/index/u64.png"/>
+        <!-- Unnamed () -->
+        <div id="u65" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u66" class="ax_paragraph fontawesome">
+        <img id="u66_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u67" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u68" class="ax_image">
+        <img id="u68_img" class="img " src="images/index/u68.png"/>
+        <!-- Unnamed () -->
+        <div id="u69" class="text">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (HTML Button) -->
+      <div id="u70" class="ax_html_button">
+        <input id="u70_input" type="submit" value="Submit"/>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u71" class="ax_shape">
+        <img id="u71_img" class="img " src="images/index/u52.png"/>
+        <!-- Unnamed () -->
+        <div id="u72" class="text">
+          <p><span>PRESSED</span></p>
         </div>
       </div>
     </div>
