--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <img id="u8_img" class="img " src="images/index/u8.png"/>
         <!-- Unnamed () -->
         <div id="u9" class="text">
-          <p><span>下</span><span>&nbsp; </span><span>载</span></p>
+          <p><span>DOWNLOAD</span></p>
         </div>
       </div>
 
