--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u8" class="ax_shape">
+      <div id="u8" class="ax_shape" href="HELLO WORLD.docx">
         <img id="u8_img" class="img " src="images/index/u8.png"/>
         <!-- Unnamed () -->
         <div id="u9" class="text">
