--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u8" class="ax_shape" href="HELLO WORLD.docx">
-        <img id="u8_img" class="img " src="images/index/u8.png"/>
+      <div id="u8" class="ax_shape">
+        <img id="u8_img" class="img " src="images/index/u8.png"/  href="HELLO WORLD.docx">
         <!-- Unnamed () -->
         <div id="u9" class="text">
           <p><span>DOWNLOAD</span></p>
