--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u8" class="ax_shape">
-        <img id="u8_img" class="img " src="images/index/u8.png"/  href="HELLO WORLD.docx">
+        <img id="u8_img" class="img " src="images/index/u8.png"/>
         <!-- Unnamed () -->
         <div id="u9" class="text">
           <p><span>DOWNLOAD</span></p>
